/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package coe528.project;

/**
 * Overview: This interface represents the states for the customer level. This interface
 * is immutable as it only provides method templates.
 */
public interface State {

    public String getName();
    
    public double purchase();
    
}
